# discord

./: .docker-build.sh  .gitignore  .travis.yml  Dockerfile  TODO  article.md  ci-artisanale.txt  metabot.opam  run
cli/: demo.ml  dune  interpreter.ml
lib/: ast.ml  dialog.ml  dialog.mli  dune  lexer.ml  parser.ml
lwt/: dune  interpreter.ml
