opam-version: "1.2"
name: "metabot"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/discord/"
bug-reports: "https://github.com/ghuysmans/discord/issues"
dev-repo: "git://github.com/ghuysmans/discord/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "A chatbot framework"
depends: [
  "dune"
]
